--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@babel/preset-react": "^7.14.5",
     "axios": "^0.23.0",
     "babel-loader": "^8.2.2",
+    "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "use-immer": "^0.6.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1"
