--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "immer": "^9.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^7.1.0",
     "react-router-dom": "^5.3.0",
     "use-immer": "^0.6.0",
     "webpack": "^5.58.2",
