--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^7.1.0",
     "react-router-dom": "^5.3.0",
+    "react-tooltip": "^4.2.21",
     "use-immer": "^0.6.0",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
